Add vendor portal